// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> should render correctly 1`] = `
<Fragment>
  <Suspense
    fallback={null}
  >
    <Suspense
      fallback={null}
    >
      <ChartModalQuery />
      <PrivacyModalQuery />
    </Suspense>
    <NavBarQuery>
      <ForwardRef
        alignItems="center"
        justifyContent="center"
      >
        <NavbarRight />
      </ForwardRef>
    </NavBarQuery>
  </Suspense>
</Fragment>
`;

exports[`<Navbar /> should render correctly when authenticated 1`] = `
<Fragment>
  <Suspense
    fallback={null}
  >
    <Suspense
      fallback={null}
    >
      <ChartModalQuery />
      <PrivacyModalQuery />
    </Suspense>
    <NavBarQuery>
      <ForwardRef
        alignItems="center"
        justifyContent="center"
      >
        <Suspense
          fallback={null}
        >
          <NavBarMenu
            currentLanguage="fr-FR"
          />
        </Suspense>
      </ForwardRef>
    </NavBarQuery>
  </Suspense>
</Fragment>
`;

exports[`<Navbar /> should render correctly with header 1`] = `
<Fragment>
  <Suspense
    fallback={null}
  >
    <Suspense
      fallback={null}
    >
      <ChartModalQuery />
      <PrivacyModalQuery />
    </Suspense>
    <NavBarQuery>
      <ForwardRef
        alignItems="center"
        justifyContent="center"
      >
        <NavbarRight />
      </ForwardRef>
    </NavBarQuery>
  </Suspense>
</Fragment>
`;
